# ui-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
hooks/: hooks.json  shim.sh  ui-re-post-verify-check.sh  ui-re-pre-generate-check.sh  ui-re-section-compare-gate.sh  ui-re-start-session.sh
scripts/: auto-verify.sh  ci-local.sh  claude-post-push.sh  claude-pre-push.sh  compare-sections.sh  download-chunks.sh  extract-assets.sh  extract-dynamic-styles.sh  extract-section-html.sh  freeze-animations.sh  gsap-to-css.sh  jsonl-skip-analysis.py  pre-push-security.sh  review.sh  run-pipeline.sh  section-clips.sh  transition-compare.sh  validate-gate.sh  video-transition-compare.sh
skills/: pixel-perfect-diff.md
skills/transition-reverse-engineering/: SKILL.md  bundle-verification.md  canvas-webgl-extraction.md  capture-frames.sh  capture-reference.md  css-extraction.md  js-animation-extraction.md  measurement.md  patterns.md  verification.md  waapi-scrub-inject.js  waapi-scrubbing.md
skills/ui-capture/: SKILL.md  capture-transitions.md  comparison-page.md  detection.md  report-page.md
skills/ui-reverse-engineering/: SKILL.md  agent-environment-rules.md  animation-detection.md  (+32 more)
tests/: conftest.py  test_dag.py  test_devtools.py  test_gate.py  test_hooks.py  test_integration.py  test_metrics.py  test_pipeline.py  test_state.py
ui_clone/: __init__.py  __main__.py  dag.py  gate.py  metrics.py  pipeline.py  state.py
(+48 files in other folders)
