[project]
name = "ui-clone-skills"
version = "0.4.7"
requires-python = ">=3.11"
dependencies = [
    "scikit-image==0.26.0",
    "Pillow==12.2.0",
    "numpy==2.4.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.9.10",
    "mypy==1.15.0",
    "pytest-cov==7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ui_clone"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["^.venv/"]

[[tool.mypy.overrides]]
module = "tifffile.*"
follow_imports = "skip"
